--- a/.github/workflows/realease.yml
+++ b/.github/workflows/realease.yml
@@ -24,12 +24,12 @@ jobs:
     steps:
       - name: Show environment
         run: export
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: wangyoucao577/go-release-action@master
+      - uses: wangyoucao577/go-release-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
