Update release workflow to include additional configuration options
- Added a comment for the `go-release-action` to provide context on its usage.
- Set `compress_assets` to "OFF" in the release workflow for better control over asset handling during the build process.

--- a/.github/workflows/realease.yml
+++ b/.github/workflows/realease.yml
@@ -34,6 +34,7 @@ jobs:
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
       - uses: wangyoucao577/go-release-action@v1
+        # https://github.com/wangyoucao577/go-release-action
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
@@ -41,3 +42,4 @@ jobs:
           build_command: "make build"
           binary_name: "kubevirt-console"
           extra_files: kubevirt-console
+          compress_assets: "OFF"
