Update Docker image tags in GitHub Actions workflow for KubeVirt Console
- Changed the image tags in the workflow to include the new namespace `jimyag` for the KubeVirt Console, ensuring proper image identification and organization in the registry.

--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -43,7 +43,7 @@ jobs:
           context: .
           platforms: linux/amd64 # https://github.com/docker-library/official-images#architectures-other-than-amd64
           file: Dockerfile
-          tags: ${{ env.REGISTRY }}/kubevirt-console:${{ steps.meta.outputs.git_tag }},${{ env.REGISTRY }}/kubevirt-console:latest
+          tags: ${{ env.REGISTRY }}/jimyag/kubevirt-console:${{ steps.meta.outputs.git_tag }},${{ env.REGISTRY }}/jimyag/kubevirt-console:latest
           push: true
           target: runner
           build-args: |
