Add Kubernetes deployment instructions and roadmap to README
- Included a section in the README for Kubernetes deployment with a sample manifest and instructions for applying it and exposing the web UI.
- Added a roadmap with TODO items for future enhancements, including authentication, observability improvements, and operational guidance.
- Updated the service port configuration in the deployment manifest to clarify the console service setup.

--- a/manifest/deploy.yaml
+++ b/manifest/deploy.yaml
@@ -90,7 +90,8 @@ spec:
   selector:
     app: kubevirt-console
   ports:
-    - port: 8080
+    - name: console
+      port: 80
       targetPort: web
-      name: http
+      protocol: TCP
   type: ClusterIP
