Enhance KubeVirt Console build process and web UI integration
- Updated the Dockerfile to include a multi-stage build for the frontend, improving asset management and reducing final image size.
- Added a new build script for the frontend to streamline the build process and ensure dependencies are installed correctly.
- Expanded the .gitignore to exclude additional build artifacts and IDE files, enhancing project cleanliness.
- Introduced a new API service for handling VMI and namespace data, improving the web console's functionality.
- Refactored the web console components to support dynamic updates and improved user experience with better state management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
+# Go 编译产物
 kubevirt-console
 kubevirt-console.exe
+*.exe
+*.dll
+*.so
+*.dylib
+
+# 前端编译产物
+web/
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/build/
+
+# IDE 和编辑器文件
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# 操作系统文件
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# 日志文件
+*.log
+logs/
+
