Update dependencies and enhance RBAC permissions in deployment manifest
- Added `k8s.io/apimachinery` v0.32.5 to `go.mod` for improved Kubernetes API interactions.
- Removed indirect dependency on `k8s.io/apimachinery` from `go.mod`.
- Updated `go.sum` to reflect changes in dependencies.
- Enhanced RBAC permissions in `deploy.yaml` by adding list, get, and watch verbs for `virtualmachineinstances`, improving resource access control.

--- a/manifest/deploy.yaml
+++ b/manifest/deploy.yaml
@@ -20,6 +20,14 @@ rules:
       - virtualmachineinstances/console
     verbs:
       - get
+  - apiGroups:
+      - "kubevirt.io"
+    resources:
+      - virtualmachineinstances
+    verbs:
+      - list
+      - get
+      - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
